Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,19 @@
 }
 
 html, body {
-  margin: 0;
-    
-  width: 100%;
-  height: 100%;
 
-  overflow-x: hidden;
-  background: var(--background);
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+
+    background: var(--background)
 }
 
 header {
   position: fixed;
-  width: 100%;
+  width: 99%;
   height: 100px;
 
   display: flex;
@@ -282,8 +283,8 @@ header {
 }
 
 @media (max-width: 1200px) {
-  body {
-    overflow-x: hidden;
+  header {
+    width: 100%;
   }
 
   header .logo {
